Fix gap

--- a/product-page.css
+++ b/product-page.css
@@ -5,7 +5,7 @@ body {
 
 .inset-body {
     background-color: #eeeeee;
-    min-height: calc(100vh - 200px);
+    min-height: calc(100vh - 50px);
     margin: 50px;
     padding: 20px;
     box-sizing: border-box;
